--- a/frontend/views/content/product-description.html
+++ b/frontend/views/content/product-description.html
@@ -97,7 +97,7 @@
                             <p class="inblock">Rs. 699</p>
                             <p class="inblock">(250 ml) | This product is worth 50 loyalty points</p>
                         </div>
-                        <div class="head-sec3">
+                        <div class="add-cart">
                             <form class="cell1">
                                 <div class="input-group">
                                     <span class="input-group-addon btn btn-default" id="basic-addon1">-</span>
